restyle a bit, add navigation that doesn't yet work

--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="landingstyle.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
 </head>
 <body>
-  <section id="background">
+  <span id="background">
+  <div id="background-scroller"></div>
+  </span>
+
   <div class="container">
-    <div class="numanuma">3</div>
+    <div class="numanuma">2024</div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL</div>
     <div class="datetime">
-      20 - 21 July 2024 (maybe lol)
+      20 - 21 July
+    </div>
+    <div class="infobubble">
+      <a href="about">
+      <div class="about">
+        <h3>About</h3>
+      </div>
+      </a>
+      <a href="rules">
+      <div class="rules">
+        <h3>Rules</h3>
+      </div>
+      </a>
+      <a href="location">
+      <div class="location">
+        <h3>Location</h3>
+      </div>
+      </a>
     </div>
   </div>
-  <div id="background-scroller"></div>
-  </section>
+
 
 </body>
