some ugly manual changes

--- a/about.html
+++ b/about.html
@@ -14,10 +14,18 @@
   </span>
   <div class="container">
     <div class="header">
-      <h1>Reading</h1>
+      <h1>The battle of Janković castle beckons</h1>
     </div>
     <div class="content">
-        <p>Reading is a great way to relax and escape from the world. It can be a great way to learn new things and expand your mind. It can also be a great way to escape from the world and enter a new one. Reading
-  </div>
+  	<p>In central Croatia, at the gate of Slavonia an ancient Roman city sleeps. Built on top of many hot springs it now hosts one of our oldest breweries and a cozy baroque castle built by count Janković and dubbed Daruvar or Crane City(the bird, not heavy machinery). It now serves as the town museum and will host this years tournament. Organized by Ars Gladiatoria for the third year in a row bigger and better than ever.</p>
+	</br>
+	<p>The tournament features 4 disciplines: 
+		- Mixed Longsword
+		- Sword and Buckler
+		- One handed
+		- Womens longsword
+		over a period of two days with the rules available <a href=https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH>here</a>.</p>
+	<p>We would like to thank.... bla bla bla</p>
+    </div>
   </div>
 </body>
