--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <div class="numanuma">2024</div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL</div>
     <div class="datetime">
-      20 - 21 July
+      20 - 21 July 2024
     </div>
     <div class="infobubble">
-      <a href="about">
+      <a href="/about.html">
       <div class="about">
         <h3>About</h3>
       </div>
       </a>
-      <a href="rules">
+      <a href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">
       <div class="rules">
         <h3>Rules</h3>
       </div>
       </a>
-      <a href="location">
+      <a href="https://maps.app.goo.gl/49hM2DKpBD7uaCjX8">
       <div class="location">
         <h3>Location</h3>
       </div>
