tweak fonts, improve description

--- a/about.html
+++ b/about.html
@@ -9,23 +9,52 @@
 
 </head>
 <body>
-  <span id="background">
+  <div>
+  <div id="background">
+    <div class="container">
+      <div class="header">
+        <h1>The battle of Janković castle beckons</h1>
+      </div>
+      <div class="content">
+      <p>A year has passed since we made fencers wet and hot inside of castle walls.<br>
+        So it is time to announce Steel & Chill 2024. With Istria conquered we are moving east.<br>
+        We can not promise neither rain nor sun, but a weekend with lots of HEMA fun.<br>
+        In Daruvar at count Janković castle, in four categories you will battle.<br>
+        <ol>
+          <li>Longsword open (36)</li>
+          <li>Sidesword (24)</li>
+          <li>Sword &amp; Buckler (24)</li>
+          <li>Longsword women (12)</li>
+        </ol>
+        <table style="text-align: left;">
+          <tr>
+            <th>Main category</th>
+            <td>40 €</td>
+          </tr>
+          <tr>
+            <th>LS Women</th>
+            <td>20 €</td>
+          </tr>
+          <tr>
+            <th>Secondary category</th>
+            <td>20 €</td>
+          </tr>
+        </table><br>
+        <a style="text-decoration:underline;" href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">Ruleset of the tournament is AFTERBLOW (Balkan one).</a>
+        <br><br>
+        Afterparty TBA
+        <br><br>
+        We have reserved accommodation for participants in a budget hostel as well as a spa with a thermal pool 3 minutes from the castle. Prices have yet to be determined but will be announced before registrations.<br>
+        The tournament will take place over two days, with sidesword, sword and buckler being on the first day, while longsword will be on the second day. (Time table will be announced)<br>
+        You will be allowed to participate in more categories if there is space in other categories.<br>
+        Priority goes to fencers who selected the category in question as their primary category.<br>
+        Ruleset and applications will be released soon. (ruleset is same as last years with minor changes)<br>
+        Keep in mind that it is safe to assume that the tournament will have tourists and visitors that will watch the matches.<br>
+        Also, since it's an outside tournament we will be exposed to the elements. Rain is highly unlikely(this time we hope), but heat is probable.<br>
+        We will make sure to be in the shade when possible and have lots of water on site. More details will follow.<br>
+      </div>
+    </div>
   <div id="background-scroller"></div>
-  </span>
-  <div class="container">
-    <div class="header">
-      <h1>The battle of Janković castle beckons</h1>
-    </div>
-    <div class="content">
-  	<p>In central Croatia, at the gate of Slavonia an ancient Roman city sleeps. Built on top of many hot springs it now hosts one of our oldest breweries and a cozy baroque castle built by count Janković and dubbed Daruvar or Crane City(the bird, not heavy machinery). It now serves as the town museum and will host this years tournament. Organized by Ars Gladiatoria for the third year in a row bigger and better than ever.</p>
-	</br>
-	<p>The tournament features 4 disciplines: 
-		- Mixed Longsword
-		- Sword and Buckler
-		- One handed
-		- Womens longsword
-		over a period of two days with the rules available <a href=https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH>here</a>.</p>
-	<p>We would like to thank.... bla bla bla</p>
-    </div>
-  </div>
+</div>
+</div>
 </body>
