--- a/about.html
+++ b/about.html
@@ -27,6 +27,11 @@
           <li>Longsword women (12)</li>
         </ol>
         <table style="text-align: left;">
+          <thead>
+            <tr>
+              <th colspan="2">Tournament Pricing</th>
+            </tr>
+          </thead>
           <tr>
             <th>Main category</th>
             <td>40 €</td>
@@ -52,6 +57,7 @@
         Keep in mind that it is safe to assume that the tournament will have tourists and visitors that will watch the matches.<br>
         Also, since it's an outside tournament we will be exposed to the elements. Rain is highly unlikely(this time we hope), but heat is probable.<br>
         We will make sure to be in the shade when possible and have lots of water on site. More details will follow.<br>
+        <br><br><br><br><br><br><br>
       </div>
     </div>
   <div id="background-scroller"></div>
