--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 </head>
 <body>
+<meta name="viewport" content="width=device-width">
+
   <span id="background">
   <div id="background-scroller"></div>
   </span>
@@ -33,6 +35,11 @@
         <h3>Rules</h3>
       </div>
       </a>
+      <a href="https://docs.google.com/document/d/1kh7Jf1SXF8KYIhAuigH34ftQH2SZBgDKBJAPUhYqgX4">
+      <div class="gear">
+        <h3>Equipment requirements</h3>
+      </div>
+      </a>
       <a href="https://maps.app.goo.gl/49hM2DKpBD7uaCjX8">
       <div class="location">
         <h3>Location</h3>
@@ -41,5 +48,15 @@
     </div>
   </div>
 
+  <footer>
+    <div class="footer">
+      <div >
+        <img id="gif" src="terry.gif" alt="Dancing cat">
+      </div>
+      <div class="footer-text">
+        <h4>© 2024 MeowMeow</h4>
+      </div>
+    </div>
+  </footer>
 
 </body>
