--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+<meta name="viewport" content="width=device-width">
+
   <div>
   <div id="background">
     <div class="container">
