--- a/about.html
+++ b/about.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 <meta name="viewport" content="width=device-width">
-
   <div>
   <div id="background">
     <div class="container">
@@ -32,7 +31,7 @@
         <table style="text-align: left;">
           <thead>
             <tr>
-              <th colspan="2">Tournament Pricing</th>
+              <th colspan="2">Tournament fees</th>
             </tr>
           </thead>
           <tr>
@@ -50,7 +49,16 @@
         </table><br>
         <a style="text-decoration:underline;" href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">Ruleset of the tournament is AFTERBLOW (Balkan one).</a>
         <br><br>
-        Afterparty TBA
+	<h2>Accomodations</h2>
+	We have made arrangements with <strong>Daruvarske Toplice</strong> with the price of <strong>€49 per night</strong>.<br>
+	This price includes breakfast, unlimited use of thermal swimming pools, WIFI, parking and insurance.<br>
+	It does not include €1,50 tourist tax and €1,30 reception registration upon arrival.<br>
+	<a style="text-decoration: underline;" href=https://maps.app.goo.gl/GrqEpXF1XEaZ9nUu9>Location</a> <br>
+	There is also a more budget friendly option at the local hostel generously offered by the <strong>Češka Beseda Daruvar</strong> with the price of <strong>€18 eur per night</strong>.<br>
+	It does not include breakfast and there are two shared bathrooms.<br>
+	<a style="text-decoration: underline;" href=https://maps.app.goo.gl/6MMtiq5UwS1WpvmW9>Location</a><br>
+	<br><br>
+        Afterparty 15€ surcharge
         <br><br>
         We have reserved accommodation for participants in a budget hostel as well as a spa with a thermal pool 3 minutes from the castle. Prices have yet to be determined but will be announced before registrations.<br>
         The tournament will take place over two days, with sidesword, sword and buckler being on the first day, while longsword will be on the second day. (Time table will be announced)<br>
