--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
+<meta property="og:url" content="https://steelnchill.com" />
+<meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
+<meta property="og:title" content="Steel and Chill 2024" />
+<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on July 20th and 21st. See all the necessary tournament info in one place." />
+<title>Steel and Chill 2024</title>
+<link rel="icon" type="image/x-icon" href="./favicon.png">
+
 </head>
 <body>
 <meta name="viewport" content="width=device-width">
@@ -22,7 +29,7 @@
     <div class="numanuma">2024</div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL</div>
     <div class="datetime">
-      20 - 21 July 2024
+      20 - 21 July 2024 - registrations open
     </div>
     <div class="infobubble">
       <a href="/about.html">
@@ -43,6 +50,11 @@
       <a href="https://maps.app.goo.gl/49hM2DKpBD7uaCjX8">
       <div class="location">
         <h3>Location</h3>
+      </div>
+      </a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaHXvCbRsnJ3StHYOB7yKRddezBsLm4MBlO-APPFiCwad-xA/viewform">
+      <div class="gear">
+	      <h3>Register</h3>
       </div>
       </a>
     </div>
