add on schedule page

--- a/about.html
+++ b/about.html
@@ -1,12 +1,22 @@
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="reading.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
+<meta charset="utf-8">
+<link rel="stylesheet" href="reading.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
+<meta property="og:url" content="https://steelnchill.com" />
+<meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
+<meta property="og:title" content="Steel and Chill 2024" />
+<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on July 20th and 21st. See all the necessary tournament info in one place." />
+<title>Steel and Chill 2024</title>
+<link rel="icon" type="image/x-icon" href="./favicon.png">
 
 </head>
 <body>
