--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       20 - 21 July 2024 - registrations open
     </div>
     <div class="infobubble">
+      <a href="/schedule.html">
+      <div class="about">
+        <h3><strong>Schedule</strong></h3>
+      </div>
+      </a>
       <a href="/about.html">
       <div class="about">
         <h3>About</h3>
