--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="numanuma">2024</div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL</div>
     <div class="datetime">
-      20 - 21 July 2024 - registrations open
+      20 - 21 July 2024 - registrations closed
     </div>
     <div class="infobubble">
       <a href="/schedule.html">
@@ -57,11 +57,13 @@
         <h3>Location</h3>
       </div>
       </a>
+     <!--
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaHXvCbRsnJ3StHYOB7yKRddezBsLm4MBlO-APPFiCwad-xA/viewform">
       <div class="gear">
 	      <h3>Register</h3>
       </div>
       </a>
+     -->
     </div>
   </div>
 
