make background actually fixed, add sponsors
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
   <div class="container">
     <div class="numanuma">2024</div>
-    <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL</div>
+    <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL
     <div class="datetime">
-      20 - 21 July 2024 - registrations closed
+      20 - 21 July 2024
+    </div>
     </div>
     <div class="infobubble">
       <a href="/schedule.html">
@@ -57,20 +58,18 @@
         <h3>Location</h3>
       </div>
       </a>
-     <!--
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaHXvCbRsnJ3StHYOB7yKRddezBsLm4MBlO-APPFiCwad-xA/viewform">
-      <div class="gear">
-	      <h3>Register</h3>
+      <a href="/sponsors.html">
+      <div class="sponsors">
+        <h3>Event sponsors</h3>
       </div>
       </a>
-     -->
     </div>
   </div>
 
   <footer>
     <div class="footer">
-      <div >
-        <img id="gif" src="terry.gif" alt="Dancing cat">
+      <div id="gif" >
+        <img src="terry.gif" alt="Dancing cat">
       </div>
       <div class="footer-text">
         <h4>© 2024 MeowMeow</h4>
