--- a/about.html
+++ b/about.html
@@ -30,58 +30,11 @@
         <h1>The battle of Janković castle beckons</h1>
       </div>
       <div class="content">
-      <p>A year has passed since we made fencers wet and hot inside of castle walls.<br>
-        So it is time to announce Steel & Chill 2024. With Istria conquered we are moving east.<br>
-        We can not promise neither rain nor sun, but a weekend with lots of HEMA fun.<br>
-        In Daruvar at count Janković castle, in four categories you will battle.<br>
-        <ol>
-          <li>Longsword open (36)</li>
-          <li>Sidesword (24)</li>
-          <li>Sword &amp; Buckler (24)</li>
-          <li>Longsword women (12)</li>
-        </ol>
-        <table style="text-align: left;">
-          <thead>
-            <tr>
-              <th colspan="2">Tournament fees</th>
-            </tr>
-          </thead>
-          <tr>
-            <th>Main category</th>
-            <td>40 €</td>
-          </tr>
-          <tr>
-            <th>LS Women</th>
-            <td>20 €</td>
-          </tr>
-          <tr>
-            <th>Secondary category</th>
-            <td>20 €</td>
-          </tr>
-        </table><br>
-        <a style="text-decoration:underline;" href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">Ruleset of the tournament is AFTERBLOW (Balkan one).</a>
-        <br><br>
-	<h2>Accomodations</h2>
-	We have made arrangements with <strong>Daruvarske Toplice</strong> with the price of <strong>€49 per night</strong>.<br>
-	This price includes breakfast, unlimited use of thermal swimming pools, WIFI, parking and insurance.<br>
-	It does not include €1,50 tourist tax and €1,30 reception registration upon arrival.<br>
-	<a style="text-decoration: underline;" href=https://maps.app.goo.gl/GrqEpXF1XEaZ9nUu9>Location</a> <br>
-	There is also a more budget friendly option at the local hostel generously offered by the <strong>Češka Beseda Daruvar</strong> with the price of <strong>€18 eur per night</strong>.<br>
-	It does not include breakfast and there are two shared bathrooms.<br>
-	<a style="text-decoration: underline;" href=https://maps.app.goo.gl/6MMtiq5UwS1WpvmW9>Location</a><br>
-	<br><br>
-        Afterparty 15€ surcharge
-        <br><br>
-        We have reserved accommodation for participants in a budget hostel as well as a spa with a thermal pool 3 minutes from the castle. Prices have yet to be determined but will be announced before registrations.<br>
-        The tournament will take place over two days, with sidesword, sword and buckler being on the first day, while longsword will be on the second day. (Time table will be announced)<br>
-        You will be allowed to participate in more categories if there is space in other categories.<br>
-        Priority goes to fencers who selected the category in question as their primary category.<br>
-        Ruleset and applications will be released soon. (ruleset is same as last years with minor changes)<br>
-        Keep in mind that it is safe to assume that the tournament will have tourists and visitors that will watch the matches.<br>
-        Also, since it's an outside tournament we will be exposed to the elements. Rain is highly unlikely(this time we hope), but heat is probable.<br>
-        We will make sure to be in the shade when possible and have lots of water on site. More details will follow.<br>
-        <br><br><br><br><br><br><br>
-      </div>
-    </div>
-</div>
-</body>
+	      <h2>Get ready for next year</h2>
+	      <p>Not to spoil too much but it's going to be a banger ;)</p>
+	      <p>We'll spend this entire year planning and improving to bring you the steeliest, the chilliest, the swordiest event this summer</p>
+	<br>
+	<br>
+	<br>
+	<br>
+      </div></div></div></div>
