--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-
+<meta property="og:type" content="website" />
 <meta property="og:url" content="https://steelnchill.com" />
 <meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
-<meta property="og:title" content="Steel and Chill 2024" />
-<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on July 20th and 21st. See all the necessary tournament info in one place." />
-<title>Steel and Chill 2024</title>
+<meta property="og:title" content="Steel and Chill 2025" />
+<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place." />
+<title>Steel and Chill 2025</title>
 <link rel="icon" type="image/x-icon" href="./favicon.png">
 
 </head>
@@ -26,18 +26,18 @@
   </span>
 
   <div class="container">
-    <div class="numanuma">2024</div>
+    <div class="numanuma">2025</div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL
     <div class="datetime">
-      20 - 21 July 2024
+      Back in summer 2025
     </div>
     </div>
     <div class="infobubble">
-      <a href="/schedule.html">
+      <!--<a href="/schedule.html">
       <div class="about">
         <h3><strong>Schedule</strong></h3>
       </div>
-      </a>
+      </a>-->
       <a href="/about.html">
       <div class="about">
         <h3>About</h3>
