--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
 
 <meta property="og:url" content="https://steelnchill.com" />
 <meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
-<meta property="og:title" content="Steel and Chill 2024" />
-<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on July 20th and 21st. See all the necessary tournament info in one place." />
-<title>Steel and Chill 2024</title>
+<meta property="og:title" content="Steel and Chill 2025" />
+<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on June 21st and 22nd. See all the necessary tournament info in one place." />
+<title>Steel and Chill 2025</title>
 <link rel="icon" type="image/x-icon" href="./favicon.png">
 
 </head>
@@ -30,9 +30,10 @@
         <h1>The battle of Janković castle beckons</h1>
       </div>
       <div class="content">
-	      <h2>Get ready for next year</h2>
-	      <p>Not to spoil too much but it's going to be a banger ;)</p>
-	      <p>We'll spend this entire year planning and improving to bring you the steeliest, the chilliest, the swordiest event this summer</p>
+	      <h2>Get ready for June</h2>
+	      <p>Not to spoil too much but it's going to be awesome ;)</p>
+	      <p>We're brewing up a storm for all you good folks this year, we won't spoil anything yet but excpect more events, bigger and better fights, an optimized ruleset and streamlined time to combat.</p>
+        <p>We took what we learned last year and made sure to fix as much as possible for this one. Stay tuned for more info!</p>
 	<br>
 	<br>
 	<br>
