--- a/index.html
+++ b/index.html
@@ -24,12 +24,26 @@
   <span id="background">
   <div id="background-scroller"></div>
   </span>
-
   <div class="container">
-    <div class="numanuma">2025</div>
+  <div class="numanuma triangle-magic" style="">
+  <div>
+      <div>
+        <img class="triangle1"src="triangle-p.svg">
+      </div>
+      <div>
+        <img class="triangle3" src="triangle-b.svg">
+      </div>
+      <div>
+        <img class="triangle2" src="triangle-lb.svg">
+      </div>
+    </div>
+</div>
+    <div class="numanuma">
+    2025
+    </div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL
     <div class="datetime">
-      Back in summer 2025
+      June 20-21 2025
     </div>
     </div>
     <div class="infobubble">
@@ -43,17 +57,17 @@
         <h3>About</h3>
       </div>
       </a>
-      <a href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">
+      <a target="_blank" href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">
       <div class="rules">
         <h3>Rules</h3>
       </div>
       </a>
-      <a href="https://docs.google.com/document/d/1kh7Jf1SXF8KYIhAuigH34ftQH2SZBgDKBJAPUhYqgX4">
+      <a target="_blank" href="https://docs.google.com/document/d/1kh7Jf1SXF8KYIhAuigH34ftQH2SZBgDKBJAPUhYqgX4">
       <div class="gear">
         <h3>Equipment requirements</h3>
       </div>
       </a>
-      <a href="https://maps.app.goo.gl/49hM2DKpBD7uaCjX8">
+      <a target="_blank" href="https://maps.app.goo.gl/49hM2DKpBD7uaCjX8">
       <div class="location">
         <h3>Location</h3>
       </div>
@@ -72,7 +86,7 @@
         <img src="terry.gif" alt="Dancing cat">
       </div>
       <div class="footer-text">
-        <h4>© 2024 MeowMeow</h4>
+        <h4>© 2025 MeowMeow</h4>
       </div>
     </div>
   </footer>
