--- a/schedule.html
+++ b/schedule.html
@@ -22,12 +22,12 @@
 
   <meta property="og:url" content="https://steelnchill.com" />
   <meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
-  <meta property="og:title" content="Steel and Chill 2024" />
+  <meta property="og:title" content="Steel and Chill 2025" />
   <meta
     property="og:description"
-    content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on July 20th and 21st. See all the necessary tournament info in one place."
+    content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on June 21st and 22nd. See all the necessary tournament info in one place."
   />
-  <title>Steel and Chill 2024</title>
+  <title>Steel and Chill 2025</title>
   <link rel="icon" type="image/x-icon" href="./favicon.png" />
 </head>
 <body>
