reskin dancing terry to hema hatsune miku
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <footer>
     <div class="footer">
       <div id="gif" >
-        <img src="terry.gif" alt="Dancing cat">
+        <img src="dens.gif" alt="Dancing cat">
       </div>
       <div class="footer-text">
         <h4>© 2025 MeowMeow</h4>
