move the year a little to make it fancier
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="neon" data-text="U">STE<span class="flicker-slow">E</span>L 'N' C<span class="flicker-fast">H</span>ILL
     <div class="datetime">
-      June 21-22 2025
+      June 21-22 <span class="hidden">2025</span>
     </div>
     </div>
     <div class="infobubble">
