small SEO stuff
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <link rel="stylesheet" href="landingstyle.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +18,7 @@
 <meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place." />
 <title>Steel and Chill 2025</title>
 <link rel="icon" type="image/x-icon" href="./favicon.png">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <meta name="viewport" content="width=device-width">
@@ -28,13 +30,13 @@
   <div class="numanuma triangle-magic" style="">
   <div>
       <div>
-        <img class="triangle1"src="triangle-p.svg">
+        <img class="triangle1"src="triangle-p.svg" alt="triangle decoration">
       </div>
       <div>
-        <img class="triangle3" src="triangle-b.svg">
+        <img class="triangle3" src="triangle-b.svg" alt="triangle decoration">
       </div>
       <div>
-        <img class="triangle2" src="triangle-lb.svg">
+        <img class="triangle2" src="triangle-lb.svg" alt="triangle decoration">
       </div>
     </div>
 </div>
@@ -103,7 +105,7 @@
   <footer>
     <div class="footer">
       <div id="gif" >
-        <img src="dens.gif" alt="Dancing cat">
+        <img loading="lazy"  src="dens.gif" alt="Dancing cat">
       </div>
       <div class="footer-text">
         <h4>© 2025 MeowMeow</h4>
@@ -112,3 +114,4 @@
   </footer>
 
 </body>
+</html>
