--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+<meta name="description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place.">
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://steelnchill.com" />
 <meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
