--- a/about.html
+++ b/about.html
@@ -30,10 +30,26 @@
         <h1>The battle of Janković castle beckons</h1>
       </div>
       <div class="content">
-	      <h2>Get ready for June</h2>
-	      <p>Not to spoil too much but it's going to be awesome ;)</p>
-	      <p>We're brewing up a storm for all you good folks this year, we won't spoil anything yet but excpect more events, bigger and better fights, an optimized ruleset and streamlined time to combat.</p>
-        <p>We took what we learned last year and made sure to fix as much as possible for this one. Stay tuned for more info!</p>
+	      <h2>🔥 Steel and Chill - The Ultimate HEMA Experience Returns! 🔥</h2>
+	      ⚔️ Get ready, because Steel and Chill is returning to Daruvar! ⚔️</br>
+	      <p>Mark your calendars for 21. - 22. 06., when we’ll be hosting one of the most exciting and laid-back HEMA competitions around. Whether you're a seasoned fighter or new to the sport, come for the challenge, stay for the fun!</br>
+	      Main category: 40 €</br>
+	      LS Women (as main category):20 €</br>
+	      SS Women (as main category):20 €</br>
+	      Secondary category: 20 €</br></p>
+	      <h3>✨ What you can expect ✨</h3>
+	      <p>Intense matches in five categories:</br>
+	      Open Longsword (36)</br>
+	      Women’s Longsword (24)</br>
+	      Open Sidesword (24)</br>
+	      Women’s Sidesword (12)</br>
+	      Open Sword and Buckler (24)</br>
+	      </br>
+	      📢 A community-focused atmosphere that’s all about fun and respect</br>
+	      🤝 A chance to meet and compete against the best HEMA practitioners in the region</br>
+	      🏆 Prizes, surprises, and maybe a few chill moments between fights!</br>
+	      📎 Registration opens 01.03. at 20h (GMT+1)</br>
+	      </p>
 	<br>
 	<br>
 	<br>
