--- a/index.html
+++ b/index.html
@@ -75,17 +75,21 @@
         <h3><strong>Schedule</strong></h3>
       </div>
       </a>-->
+      <div class="about">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIuNRfv1K3MlcBNpqo6edDTSNZEX2IUNTmRJKFOcv_2F1B-w/viewform">
+      <h3>Registration sheet</h3>
+      </div>
       <a href="/about.html">
       <div class="about">
         <h3>About</h3>
       </div>
       </a>
-      <a target="_blank" href="https://docs.google.com/document/d/1tpmSH0I1sUvCf_djmmEnHZbeXJPpYlOH">
+      <a target="_blank" href="https://docs.google.com/document/d/1n_LeMfYkWdLyTwpVlouSq8LEt15jQ1ENHNLSJpG78qk">
       <div class="rules">
         <h3>Rules</h3>
       </div>
       </a>
-      <a target="_blank" href="https://docs.google.com/document/d/1kh7Jf1SXF8KYIhAuigH34ftQH2SZBgDKBJAPUhYqgX4">
+      <a target="_blank" href="https://docs.google.com/document/d/1yQFtOvud9Au-ewyjuyQgcg1wRd3By3yW">
       <div class="gear">
         <h3>Equipment requirements</h3>
       </div>
