--- a/sponsors.html
+++ b/sponsors.html
@@ -15,6 +15,7 @@
   <div class="box">
     <div id="title">
       <h1>Our beloved sponsors</h1>
+      <h3>Updated shiny page coming soon!</h3>
     </div>
     <p>
     Due to budget constraints, this page is being made with the least effort possible.<br/> Of course no one is actually paying me to make it or maintain it, so I guess it's not really a constraint. But I'm lazy.<br/><strong>So here's a list of our sponsors:</strong>
