--- a/sponsors.html
+++ b/sponsors.html
@@ -6,7 +6,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
-
+<meta name="description" content="Greatest HEMA tournament sponsors in the world being shown in Daruvar, Croatia. See all the sponsors in one place.">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://steelnchill.com/sponsors" />
+<meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
+<meta property="og:title" content="Sponsors and Chill 2025" />
+<meta property="og:description" content="Greatest HEMA tournament sponsors in the world being shown in Daruvar, Croatia. See all the sponsors in one place." />
+<title>Sponsors and Chill 2025</title>
+<link rel="icon" type="image/x-icon" href="./favicon.png">
 </head>
 <body>
   <span id="background">
